--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,12 @@
 <resources>
     <string name="app_name">JajanYuk</string>
+    <string name="network_error_message">Network error occurred. Please check your internet connection</string>
+    <string name="unknown_error">Unknown Error</string>
+    <string name="password_notmatch">Password does not match</string>
+    <string name="fullName_required">Name must not be empty</string>
+    <string name="email_required">Email must not be empty</string>
+    <string name="username_required">Username must not be empty</string>
+    <string name="address_required">Address must not be empty</string>
+    <string name="password_required">Password must not be empty</string>
+    <string name="confirmPassword_required">Confirm password must not be empty</string>
 </resources>
