style: add ui fragment produk

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,6 @@
         <item>Tidak Aktif</item>
     </string-array>
     <string name="title_activity_maps_pedagang">MapsPedagangActivity</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
